# at-streaming-data-pipeline

./: .env.example  .gitignore  .sqlfluff  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
deploy/databricks/: run_dbt.py
deploy/terraform/: .terraform.lock.hcl  README.md  databricks.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
docs/: design-philosophy.md  generate_architecture.py
docs/plans/: at-streaming-data-pipeline-design.md  at-streaming-data-pipeline-implementation.md
infrastructure/: docker-compose.yml  redpanda-console-config.yaml
notebooks/: avro_spark_validation.ipynb  explore_at_api.ipynb
scripts/: query_bronze.py  sync_to_duckdb.py  verify_q4_batch.py
spikes/: spike_consumer.py  spike_producer.py
src/dashboard/: app.py
src/ingestion/: at_producer.py  requirements.txt
src/streaming/: _shutdown.py  alert_correlation_job.py  alerts_consumer_job.py  bronze_ingestion.py  corridor_congestion_job.py  delay_alert_job.py  headway_regularity_job.py  kafka_utils.py  main.py  vehicle_stall_job.py
tests/: conftest.py  test_alert_correlation.py  test_bronze_enrichment.py  test_corridor_congestion.py  test_delay_alert.py  test_headway_regularity.py  test_vehicle_stall.py
tests/unit/: test_bronze_enrichment.py  test_delay_alert.py  test_headway_regularity.py  test_vehicle_stall.py
transform/: .sqlfluff  .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
transform/macros/: read_bronze.sql  read_gtfs.sql
transform/seeds/: gtfs_routes.csv  (+1 more)
(+29 files in other folders)
