[project]
name = "at-streaming-data-pipeline"
version = "0.1.0"
description = "Auckland Transport Real-time Streaming Pipeline"
readme = "README.md"
requires-python = ">=3.12.8,<3.13"
dependencies = [
    "confluent-kafka[avro]>=2.3.0",
    "fastavro>=1.10.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyspark>=4.1.1",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "duckdb>=1.2.0",
    "dbt-duckdb>=1.9.0",
    "streamlit>=1.35.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "sqlfluff>=3.0.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "testcontainers>=4.0.0",
]
